--- a/src/Hash_Cracker.cbp
+++ b/src/Hash_Cracker.cbp
@@ -2,7 +2,7 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="hashcracker" />
+		<Option title="Hash_Cracker" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
